0.8.0/_sources/generated/statsmodels.discrete.discrete_model.Poisson.rst.txt
statsmodels.discrete.discrete_model.Poisson
===========================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: Poisson

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~Poisson.cdf
    
    
      ~Poisson.cov_params_func_l1
    
    
      ~Poisson.fit
    
    
      ~Poisson.fit_constrained
    
    
      ~Poisson.fit_regularized
    
    
      ~Poisson.from_formula
    
    
      ~Poisson.hessian
    
    
      ~Poisson.information
    
    
      ~Poisson.initialize
    
    
      ~Poisson.jac
    
    
      ~Poisson.loglike
    
    
      ~Poisson.loglikeobs
    
    
      ~Poisson.pdf
    
    
      ~Poisson.predict
    
    
      ~Poisson.score
    
    
      ~Poisson.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Poisson.endog_names
      ~Poisson.exog_names
   
   