v0.13.5/_sources/generated/statsmodels.discrete.discrete_model.Poisson.rst.txt
statsmodels.discrete.discrete\_model.Poisson
============================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: Poisson
   :exclude-members: cdf,cov_params_func_l1,fit,fit_constrained,fit_regularized,from_formula,hessian,hessian_factor,information,initialize,loglike,loglikeobs,pdf,predict,score,score_factor,score_obs,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~Poisson.cdf
      ~Poisson.cov_params_func_l1
      ~Poisson.fit
      ~Poisson.fit_constrained
      ~Poisson.fit_regularized
      ~Poisson.from_formula
      ~Poisson.hessian
      ~Poisson.hessian_factor
      ~Poisson.information
      ~Poisson.initialize
      ~Poisson.loglike
      ~Poisson.loglikeobs
      ~Poisson.pdf
      ~Poisson.predict
      ~Poisson.score
      ~Poisson.score_factor
      ~Poisson.score_obs
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~Poisson.endog_names
      ~Poisson.exog_names
      ~Poisson.family
   
   
   